crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__Django__4.2.28__django__templatetags__i18n.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/4.2.28/django/templatetags/i18n.py
---
tag_rules:
  "django.templatetags.i18n::tag::blocktrans":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      allow_duplicates: false
      rejects_unknown: true
    extracted_args: []
    supports_as_var: false
  "django.templatetags.i18n::tag::blocktranslate":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      allow_duplicates: false
      rejects_unknown: true
    extracted_args: []
    supports_as_var: false
  "django.templatetags.i18n::tag::get_available_languages":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "django.templatetags.i18n::tag::get_current_language":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "django.templatetags.i18n::tag::get_current_language_bidi":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "django.templatetags.i18n::tag::get_language_info":
    arg_constraints:
      - Exact: 5
    required_keywords:
      - position:
          Forward: 1
        value: for
      - position:
          Forward: 3
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: for
        required: true
        kind:
          Literal: for
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: as
        required: true
        kind:
          Literal: as
        position: 2
      - name: arg4
        required: true
        kind: Variable
        position: 3
    supports_as_var: false
  "django.templatetags.i18n::tag::get_language_info_list":
    arg_constraints:
      - Exact: 5
    required_keywords:
      - position:
          Forward: 1
        value: for
      - position:
          Forward: 3
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: for
        required: true
        kind:
          Literal: for
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
      - name: as
        required: true
        kind:
          Literal: as
        position: 2
      - name: arg4
        required: true
        kind: Variable
        position: 3
    supports_as_var: false
  "django.templatetags.i18n::tag::language":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "django.templatetags.i18n::tag::trans":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      allow_duplicates: false
      rejects_unknown: true
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "django.templatetags.i18n::tag::translate":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      allow_duplicates: false
      rejects_unknown: true
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities:
  "django.templatetags.i18n::filter::language_bidi":
    expects_arg: false
    arg_optional: false
  "django.templatetags.i18n::filter::language_name":
    expects_arg: false
    arg_optional: false
  "django.templatetags.i18n::filter::language_name_local":
    expects_arg: false
    arg_optional: false
  "django.templatetags.i18n::filter::language_name_translated":
    expects_arg: false
    arg_optional: false
block_specs:
  "django.templatetags.i18n::tag::blocktrans":
    end_tag: endblocktrans
    intermediates:
      - plural
    opaque: false
  "django.templatetags.i18n::tag::blocktranslate":
    end_tag: endblocktranslate
    intermediates:
      - plural
    opaque: false
  "django.templatetags.i18n::tag::language":
    end_tag: endlanguage
    intermediates: []
    opaque: false
